trying to fix the overflow

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -159,6 +159,8 @@
     align-items: center;
     padding: 22px 16px;
     padding-bottom: 66px;
+    max-width: 100vw;
+    overflow: hidden;
   }
 }
 
